--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb+srv://gadamallasharvani06:Sharvani%4024@vishwatechnos.fhcy6.mongodb.net/Vt-1yrEvent?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://Akshaya:Akshaya9876@vishwasri.s7v4g.mongodb.net/Event?retryWrites=true&w=majority&appName=Vishwasri
+
